# dbt-load

./: README.md  alembic.ini  pyproject.toml  requirements.txt  requirements_local_dev.txt  setup.cfg  setup.ini  snow.json  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md  release_template.md
.github/workflows/: cd_build.yml  cd_deploy.yml  cd_deployment_pipeline.yml  ci_pr_az_devops_linker.yml  ci_pr_checks.yml  ci_terrafom_plan.yml  ci_terraform_run.yml  ci_unit_test_sonarqube_code_quality.yml  ci_upgrade_packages.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20240422142548_280f4ed01fff_first_revision.py
config/dev/: databricks_dbt_job.yml
config/prd/: databricks_sql_warehouse.yml
config/tst/: databricks_dbt_job.yml  databricks_sql_warehouse.yml
config/uat/: databricks_dbt_job.yml
dbt_transform/: .dbtignore  .sqlfluffignore  dbt_project.yml  packages.yml  profiles.yml
dbt_transform/analyses/: aws_read_landing_example.sql  elementary_package_test.sql  generate_yml_files.sql
docs/: _config.yml  index.html
edp_dbt_runner/: edp_dbt_runner.py
edp_dbt_runner/helpers/: elementary.py  logger.py  utils.py
edp_dbt_runner/tests/: conftest.py  edp_dbt_runner_test.py
notebooks/: example.py
notebooks/subfolder/: example_in_subfolder.py
terraform/: databricks_cluster.tf  databricks_job_dbt.tf  databricks_job_dbt_serverless.tf  databricks_notebook.tf  databricks_secret_scope.tf  databricks_sql_endpoint.tf  providers.tf  variables.tf
utils/: logger.py  pull_latest_changes_from_template.py
(+229 files in other folders)
