# setup/build
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# pre-commit
[tool.black]
line-length = 90
force-exclude = "utils/create_example_data"

[tool.pycln]
all = true
exclude = "utils/create_example_data"

[tool.isort]
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.sqlfluff.core]
templater = "dbt"
dialect = "databricks"
max_line_length = 90

[tool.sqlfluff.templater.dbt]
project_dir = "dbt_transform"
apply_dbt_builtins = true
