[metadata]
name = edp_dbt_runner
author = SITI-PTIY/FPD
url = https://github.com/sede-x/Template-EDP-DBT-Reference-Pipeline
description = Current DBT project + EDP DBT runner
long_description = file: README.md
long_description_content_type = text/markdown
keywords = DBT, Databricks, EDP, Shell

[options]
packages =
	edp_dbt_runner
	edp_dbt_runner.helpers
	edp_dbt_runner.helpers.databricks
	edp_dbt_runner.helpers.github
install_requires =
	dbt-databricks == 1.9.4
	elementary-data == 0.16.1
zip_safe = True

[options.package_data]
edp_dbt_runner = dbt/**/*.*

[options.entry_points]
console_scripts =
	run = edp_dbt_runner.edp_dbt_runner:run
